--- a/client/package.json
+++ b/client/package.json
@@ -25,7 +25,9 @@
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
-    "recharts": "^2.13.3"
+    "react-redux": "^9.1.2",
+    "recharts": "^2.13.3",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@types/node": "^20.17.7",
