commit 9: client+server
    1. Project Board view UI with drag and drop functionalities
    2. docker setup for postgres and pgadmin

--- a/server/prisma/seedData/project.json
+++ b/server/prisma/seedData/project.json
@@ -57,7 +57,7 @@
   },
   {
     "id": 9,
-    "name": "India",
+    "name": "State",
     "description": "Telecommunication infrastructure upgrade.",
     "startDate": "2023-06-01T00:00:00Z",
     "endDate": "2023-12-01T00:00:00Z"
